--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,15 @@
     <name>cms</name>
     <description>微服务系统demo</description>
 
+    <modules>
+        <module>cms-api</module>
+        <module>cms-auth</module>
+        <module>cms-common</module>
+        <module>cms-gateway</module>
+        <module>cms-modules</module>
+        <module>cms-visual</module>
+    </modules>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
