--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     </modules>
 
     <properties>
+        <cms.version>3.3.0</cms.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -211,6 +212,62 @@
                 <artifactId>log4j-to-slf4j</artifactId>
                 <version>${log4j2.version}</version>
             </dependency>
+
+            <!-- 核心模块 -->
+            <dependency>
+                <groupId>com.flybird</groupId>
+                <artifactId>cms-common-core</artifactId>
+                <version>${cms.version}</version>
+            </dependency>
+
+            <!--            &lt;!&ndash; 接口模块 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.ruoyi</groupId>-->
+            <!--                <artifactId>ruoyi-common-swagger</artifactId>-->
+            <!--                <version>${ruoyi.version}</version>-->
+            <!--            </dependency>-->
+
+            <!--            &lt;!&ndash; 安全模块 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.ruoyi</groupId>-->
+            <!--                <artifactId>ruoyi-common-security</artifactId>-->
+            <!--                <version>${ruoyi.version}</version>-->
+            <!--            </dependency>-->
+
+            <!--            &lt;!&ndash; 权限范围 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.ruoyi</groupId>-->
+            <!--                <artifactId>ruoyi-common-datascope</artifactId>-->
+            <!--                <version>${ruoyi.version}</version>-->
+            <!--            </dependency>-->
+
+            <!--            &lt;!&ndash; 多数据源 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.ruoyi</groupId>-->
+            <!--                <artifactId>ruoyi-common-datasource</artifactId>-->
+            <!--                <version>${ruoyi.version}</version>-->
+            <!--            </dependency>-->
+
+            <!--            &lt;!&ndash; 日志记录 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.ruoyi</groupId>-->
+            <!--                <artifactId>ruoyi-common-log</artifactId>-->
+            <!--                <version>${ruoyi.version}</version>-->
+            <!--            </dependency>-->
+
+            <!-- 缓存服务 -->
+            <dependency>
+                <groupId>com.flybird</groupId>
+                <artifactId>cms-common-redis</artifactId>
+                <version>${cms.version}</version>
+            </dependency>
+
+            <!--            &lt;!&ndash; 系统接口 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.ruoyi</groupId>-->
+            <!--                <artifactId>ruoyi-api-system</artifactId>-->
+            <!--                <version>${ruoyi.version}</version>-->
+            <!--            </dependency>-->
 
         </dependencies>
     </dependencyManagement>
