--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ nbdist/
 
 ######################################################################
 # Others
-*.log
+#*.log
 *.xml.versionsBackup
 
 !*/build/*.java
