--- a/cms-common/cms-common-swagger/pom.xml
+++ b/cms-common/cms-common-swagger/pom.xml
@@ -12,4 +12,23 @@
     <version>3.3.0</version>
     <name>cms-common-swagger</name>
 
+    <description>
+        cms-common-swagger系统接口
+    </description>
+
+    <dependencies>
+
+        <!-- SpringBoot Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+    </dependencies>
 </project>
